--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Example of the Implicit Grant flow with Spotify</title>
+    <title>Spotify Visualization</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style type="text/css">
       #login, #loggedin {
         display: none;
@@ -18,20 +19,20 @@
   </head>
 
   <body>
-    <div class="container">
-      <div id="login">
-        <h1>This is an example of the Implicit Grant flow</h1>
-        <button id="login-button" class="btn btn-primary">Log in with Spotify</button>
-      </div>
-      <div id="loggedin">
-        <div id="user-profile">
+    <div id="login">
+      <h1>A Visualization of Your Music</h1>
+      <button id="login-button" class="btn btn-primary">Log in with Spotify</button>
+    </div>
+    <div id="loggedin">
+      <div id="user-profile">
+        <div id= "user-playlists">
         </div>
-        <div id="oauth">
+        <div id='user-playlists-songs'>
         </div>
       </div>
     </div>
-    <!-- <script src='scripts/test.js'></script> -->
-    <!-- <script src='scripts/spotify-web-api.js'></script> -->
+    <script src='scripts/spotify-web-api.js'></script>
+    <script src='scripts/data.js'></script>
     <script src='scripts/auth.js'></script>
   </body>
 </html>
