--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src='d3/d3.min.js'></script>
   </head>
 
   <body>
@@ -29,9 +30,12 @@
         </div>
         <div id='user-playlists-songs'>
         </div>
+        <div id='radial'>
+        </div>
       </div>
     </div>
     <script src='scripts/spotify-web-api.js'></script>
+    <script src='scripts/radarchart.js'></script>
     <script src='scripts/data.js'></script>
     <script src='scripts/auth.js'></script>
   </body>
