--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </div>
         <div id='radial'>
         </div>
+        <div id='scatter'>
+        </div>
       </div>
     </div>
     <script src='scripts/spotify-web-api.js'></script>
