--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Spotify Visualization</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="jquery-ui/jquery-ui.theme.css"> -->
     <style type="text/css">
       #login, #loggedin {
         display: none;
@@ -17,6 +18,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src='d3/d3.min.js'></script>
+    <!-- <script src="jquery-ui/jquery-ui.js"></script> -->
   </head>
 
   <body>
@@ -30,9 +32,9 @@
         </div>
         <div id='user-playlists-songs'>
         </div>
-        <div id='radial'>
-        </div>
         <div id='scatter'>
+        </div>
+        <div id='radial'>
         </div>
       </div>
     </div>
