--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
         </div>
         <div id='radial'>
         </div>
-        <div id='scatter'>
+        <div id='novel'>
         </div>
       </div>
     </div>
     <script src='scripts/spotify-web-api.js'></script>
     <script src='scripts/radarchart.js'></script>
+    <script src='scripts/novelchart.js'></script>
     <script src='scripts/data.js'></script>
     <script src='scripts/auth.js'></script>
   </body>
