--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
         </div>
       </div>
     </div>
+
+  <div id="myModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>Error 504: GateWay Timeout</h2>
+    </div>
+    <div class="modal-body">
+      <p>Please refresh page, Spotify's Web Servers are not responding</p>
+    </div>
+  </div>
+  </div>
+
     <script src='scripts/spotify-web-api.js'></script>
     <script src='scripts/radarchart.js'></script>
     <script src='scripts/novelchart.js'></script>
