--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src='d3/d3.min.js'></script>
+    <script src="d3/d3.tip.js"></script>
     <!-- <script src="jquery-ui/jquery-ui.js"></script> -->
   </head>
 
